-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
6.11
-
None
-
-
429aff92a (dev), 95e53b4cf (6.10)
Static build of examples using QtQuick3DPhysics fails to link as QtQuick3D and QtQuick3DPhysics both provide CapsuleGeometry in the their helper library.
/home/sapiippo/qt6/build/tmp/work/cortexa57-poky-linux/qtdoc-examples/6.11.0/recipe-sysroot-native/usr/bin/aarch64-poky-linux/../../libexec/aarch64-poky-linux/gcc/aarch64-poky-linux/15.2.0/ld: /home/sapiippo/qt6/build/tmp/work/cortexa57-poky-linux/qtdoc-examples/6.11.0/recipe-sysroot/usr/lib/libQt6Quick3DPhysicsHelpers.a(qcapsulegeometry.cpp.o): in function `CapsuleGeometry::setEnableNormals(bool)':
/usr/src/debug/qtquick3dphysics/6.11.0/src/helpers/qcapsulegeometry.cpp:74: multiple definition of `CapsuleGeometry::setEnableNormals(bool)'; /home/sapiippo/qt6/build/tmp/work/cortexa57-poky-linux/qtdoc-examples/6.11.0/recipe-sysroot/usr/lib/libQt6Quick3DHelpers.a(capsulegeometry.cpp.o):/usr/src/debug/qtquick3d/6.11.0/src/helpers/capsulegeometry.cpp:116: first defined here
Tested with xr_physicsbase_teleportation example in qtdoc repo