Rename CapsuleGeometry

Rename CapsuleGeometry to CapsuleGeometryPhysics. Otherwise static
builds of examples using QtQuick3DPhysics fails to link as QtQuick3D and
QtQuick3DPhysics both provide CapsuleGeometry in their helper libraries.
Since this is a QML class, changing the C++ class name does not break
ABI.

Fixes: QTBUG-139437
Change-Id: Id38ef330427571c1a07623ed83e8b8f228c00a93
Reviewed-by: Inho Lee <inho.lee@qt.io>
Reviewed-by: Jonas Karlsson <jonas.karlsson@qt.io>
(cherry picked from commit 429aff92a9b7dd1101bc0df3297105d4f407317f)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>